...
  static const cartEmptyTitle = 'Ouch! Hungry';
  static const cartEmptyMessage =
      'Seems like you have not ordered any food yet';
  static const cartFindFoods = 'Find Foods';
  static const cartOrderNow = 'Order Now';
  static const cartOrderPlaced = 'Order placed successfully!';
  static const cartAddedToCart = 'added to cart!';
  static const cartPaymentSummary = 'Payment Summary';
  static const cartTotalItems = 'Total Items';
  static const cartDeliveryFee = 'Delivery Fee';
  static const cartFree = 'Free';
  static const cartTotal = 'Total';

...
